Adds a playable snake game to the projects page.

--- a/index.css
+++ b/index.css
@@ -75,6 +75,10 @@ article > img {
     width: 50%;
 }
 
+#snake {
+    margin-top: 1%;
+}
+
 .flex-row {
     display: flex;
     flex-direction: row;
