--- a/index.css
+++ b/index.css
@@ -16,13 +16,14 @@ body {
     margin: 0;
     width: 100%;
     font-family: Arial, Helvetica, sans-serif;
+    background-color: #333333;
 }
 
 header {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: teal;
+    background-color: black;
     padding-bottom: 2em;
 }
 
@@ -39,14 +40,10 @@ header nav {
 
 a, a:visited {
     text-decoration: none;
-    color: orange;
+    color: lime;
 }
 
 a:hover {
-    color: teal;
-}
-
-header a:hover {
     color: white;
 }
 
@@ -58,7 +55,8 @@ main {
 }
 
 main h1 {
-    border-bottom: 1pt solid black;
+    border-bottom: 1pt solid white;
+    color: white;
 }
 
 main > * {
@@ -69,6 +67,14 @@ main > * {
 
 article img {
     width: 100%;
+}
+
+article h3 {
+    color: white;
+}
+
+article p {
+    color: white;
 }
 
 /* #timer {
