--- a/index-dark.css
+++ b/index-dark.css
@@ -13,6 +13,8 @@
 }
 
 body {
+    background-color: black;
+    color: white;
     margin: 0;
     width: 100%;
     display: flex;
@@ -21,19 +23,23 @@ body {
     font-family: 'Times New Roman', Times, serif;
 }
 
+canvas {
+    border: 1px solid white;
+}
+
 a, a:visited {
-    color: blue;
+    color: #5f5ffa;
 }
 
 a:hover {
-    color: #5f5ffa;
+    color: #9898fa;
 }
 
 header {
     display: flex;
     flex-direction: column;
     align-items: center;
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid white;
 }
 
 header h1 {
